[package]
name = "lndk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
bitcoin = "0.29.2"
futures = "0.3.26"
lightning = "0.0.114"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
log = "0.4.17"
simple_logger = "4.0.0"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread"] }
tonic = "0.8.3"
tonic_lnd = "0.5.1"
hex = "0.4.3"

[dev-dependencies]
bitcoincore-rpc = { package="core-rpc", version = "0.17.0" }
bitcoind = { version = "0.30.0", features = [ "24_0_1" ] }
flate2 = "1.0.25"
minreq = { version = "2.7.0", features = [ "https" ] }
mockall = "0.11.3"
tar = "0.4.38"
